--- a/GUI/goal-tracker/package.json
+++ b/GUI/goal-tracker/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-scripts": "5.0.1",
+    "react-split-pane": "^0.1.92",
     "reactflow": "^11.9.4",
     "web-vitals": "^2.1.4"
   },
